# 2026

./: .gitignore  README.md
.github/: README.md
.github/workflows/: build-home.yml  check-deps.yml  deploy-gitops.yml  main.yml  mirror-gitee.yml
blog/: book.toml
blog/book/: 404.html  index.html
blog/book/2026/: 404.html  chapter_1.html  print.html  toc.html
book/: book.toml
book/book/: index.html  snake.js
exps/: README.md
gitops/: Cargo.toml  README.md
infra/gitopsctl/: Cargo.toml  README.md
website/: README.md
website/deploy/: _redirects  index.html
website/deploy/home/: 404.html  LICENSE.html  index.html  print.html  searcher-c2a407aa.js  searchindex-729b110d.js  toc-259e645f.js  toc.html
website/src/: README.md
website/src/home/: README.md  book.toml
website/src/home/src/: LICENSE.md  README.md  SUMMARY.md
